added homepage to the package dot json file for deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "countdown-timer",
+  "homepage": "http://www.myboygabe.com/projects/countdown-timer/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
